{
    "name": "GameControl",
    "maps": [
        {
            "name": "GameControl",
            "id": "a5717283-c39a-4546-9daf-8efc9d8a4c48",
            "actions": [
                {
                    "name": "Manu",
                    "type": "Button",
                    "id": "10d37ab4-f51f-4c94-8723-23cf6c87fd5b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "21b709d7-ecba-4406-9f4c-151e3feda979",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Manu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}